# mmo-server-poc

./: .dockerignore  .env.server  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  HOSTING.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy.yml
client-test-tool/: .dockerignore  .env  .env.client  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
client-test-tool/src/: app.js  constants.js  game-renderer.js  gameClient.ts  input.ts  main.js  main.ts  network.ts  player.js  player.ts  renderer.ts  style.css  types.ts  utils.ts
examples/: add_health_component.rs
player_simulation/: README.md  package-lock.json  package.json  player_simulation.js
src/: main.rs
src/ecs/: components.rs  mod.rs  systems.rs
src/ecs/core/: README.md  components.rs  mod.rs  plugin.rs  resources.rs
src/ecs/plugins/: mod.rs
src/ecs/plugins/combat/: components.rs
src/ecs/plugins/debug/: mod.rs  plugin.rs  systems.rs
src/ecs/plugins/input/: components.rs  mod.rs  plugin.rs  systems.rs
src/ecs/plugins/movement/: README.md  components.rs  mod.rs  plugin.rs  systems.rs
src/ecs/plugins/network/: README.md  auto_networked.rs  component_registry.rs  components.rs  example_npc.rs  mod.rs  networked_object.rs  networked_state.rs  plugin.rs  systems.rs
src/ecs/plugins/network/udp/: components.rs  mod.rs  plugin.rs  systems.rs
src/ecs/plugins/network/ws/: components.rs  mod.rs  plugin.rs  systems.rs
src/ecs/plugins/player/: README.md  components.rs  plugin.rs  systems.rs
src/ecs/plugins/transform/: components.rs  plugin.rs  systems.rs
src/ecs/plugins/websocket/: components.rs  mod.rs  systems.rs
