[package]
name = "mmo_game_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "multi_threaded",
] }
bevy_renet = "1.0.0"
bevy_simplenet = "0.14"
crossbeam-channel = "0.5.15"
enfync = "0.1"
futures-util = "0.3.31"
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
glam = { version = "0.30.4", features = ["serde"] }
tokio = "1.46.1"
tokio-tungstenite = "0.27.0"
serde_json = "1.0.140"
rand = "0.8"
