[package]
name = "mmo_game_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "multi_threaded",     # Async operations and parallel systems
] }
# WebSocket and async runtime  
tokio = { version = "1.46.1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tokio-tungstenite = "0.27.0"
crossbeam-channel = "0.5.15"
futures-util = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

# Math and utilities  
glam = { version = "0.30.4", features = ["serde"] }
rand = "0.8"

# ============================================================================
# BUILD PROFILES
# ============================================================================

[profile.dev]
# Fast development builds
opt-level = 0          # No optimization
debug = true           # Include debug info
lto = false           # No link-time optimization
codegen-units = 256   # Maximum parallelization
incremental = true    # Incremental compilation
panic = "unwind"      # Preserve stack traces

[profile.release]
# Production optimized builds (used in Docker)
opt-level = 3         # Maximum optimization
debug = false         # No debug info (smaller binary)
lto = "fat"          # Full link-time optimization
codegen-units = 1    # Single unit for max optimization
panic = "abort"      # Smaller binary (no unwind tables)
strip = true         # Strip debug symbols
