[package]
name = "mmo_game_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "multi_threaded",     # Async operations and parallel systems
] }
# WebSocket and async runtime  
tokio = { version = "1.46.1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tokio-tungstenite = "0.27.0"
crossbeam-channel = "0.5.15"
futures-util = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

# Math and utilities  
glam = { version = "0.30.4", features = ["serde"] }
rand = "0.8"
